@@ -1,4 +1,4 @@
-#ifdef	DEBUG
+#ifndef NDEBUG
 #define MACH_ASSERT 1
 #else
 #define MACH_ASSERT 0
